fix spillover on piece grid

--- a/src/component-css/PieceComponent.css
+++ b/src/component-css/PieceComponent.css
@@ -10,6 +10,9 @@
     padding-top: 3%;
     margin-bottom: 5%;
     color: black;
+    -webkit-column-break-inside: avoid; /* Chrome, Safari, Opera */
+    page-break-inside: avoid; /* Firefox */
+    break-inside: avoid;
 }
 .piece-info {
     display: flex;
@@ -55,7 +58,6 @@ a {
 }
 @media screen and (max-width: 600px) {
     .piece-container:hover {
-        transform: default;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.02), 0 5px 12px -6px rgba(0, 0, 0, 0.1), 0 -12px 25px -19px rgba(0, 0, 0, 0.2);
+        all: revert;
     }
 }
